Name:                diagrams-sunroof
Version:             0.1
Synopsis:            A Diagrams backend using Sunroof.
Description:         A Diagrams backend using Sunroof to render diagrams 
                     to the HTML5 Canvas element.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Jan Bracker <jan.bracker@googlemail.com>
Maintainer:          Jan Bracker <jan.bracker@googlemail.com>
Bug-reports:         https://github.com/jbracker/diagrams-sunroof/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8

Source-repository head
  type:     git
  location: git://github.com/jbracker/diagrams-sunroof.git

Library
  Exposed-modules:     Diagrams.Backend.Sunroof
  Hs-source-dirs:      src
  Build-depends:       base >= 4.3.1 && < 5,
                       mtl >= 2.0,
                       sunroof-compiler == 0.2.*,
                       data-default-class >= 0.0.1,
                       NumInstances >= 1.1,
                       diagrams-core >= 0.7 && < 0.8,
                       diagrams-lib >= 0.7 && < 0.8
